[gd_scene load_steps=2 format=3 uid="uid://cffwg17y5cmq5"]

[ext_resource type="Script" path="res://Scripts/scenes scripts/shop_scene.gd" id="1_liic6"]

[node name="ShopScene" type="Node2D"]
script = ExtResource("1_liic6")

[node name="Label" type="Label" parent="."]
offset_left = 836.0
offset_top = 86.0
offset_right = 1078.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 100
text = "Shop"

[node name="Button" type="Button" parent="."]
offset_left = 780.0
offset_top = 916.0
offset_right = 1147.0
offset_bottom = 1007.0
theme_override_font_sizes/font_size = 60
text = "Back to map"

[node name="Label2" type="Label" parent="."]
offset_left = 750.0
offset_top = 450.0
offset_right = 853.0
offset_bottom = 533.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "100"

[node name="ShopItems" type="Node" parent="."]

[node name="Label3" type="Label" parent="."]
offset_left = 1498.0
offset_top = 56.0
offset_right = 1651.0
offset_bottom = 166.0
theme_override_font_sizes/font_size = 80
text = "text"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
